--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "superjson": "1.12.2",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
